--- a/css/style.css
+++ b/css/style.css
@@ -1472,7 +1472,7 @@ a:hover {
   text-align: center;
   background-color: #f7f7f7;
   font-size: 0;
-} 
+}
 
 
 .s11::after {
@@ -1753,7 +1753,7 @@ a:hover {
 /*SECTION 15*/
 
 .s15 {
-  
+
   max-width: 972px;
   margin: auto;
   /*margin-top: 20px;*/
@@ -1878,7 +1878,7 @@ padding-right: 0px;
   vertical-align: middle;
 }
 .s16_breadcrumb a {
- 
+
   color: #fd926d;
   vertical-align: middle;
 
@@ -1900,7 +1900,7 @@ padding-right: 0px;
 .s16_price_reviews_container{
   height: 35px;
   /*border: solid 1px red;*/
-  
+
   height: 50px;
 }
 
@@ -2234,7 +2234,7 @@ height: 60px;
 }
 
 
-.s18_container_title_text, 
+.s18_container_title_text,
 .s18_container_title_number {
   font-family: Arial, Helvetica, sans-serif;
    text-transform: uppercase;
@@ -2255,6 +2255,14 @@ height: 60px;
 }
 
 
+/*-------------------PRODUCTS PAGE---------------------*/
+/*SECTION 15  */
+
+.s15_products_page {
+  max-width: 972px;
+  margin: auto;
+}
+
 /*SECTION 19  */
 
 .s19 .slideshow-container {
@@ -2263,12 +2271,12 @@ height: 60px;
 
 
 .s19 .mySlides {
-  height: 440px;
+  height: 430px;
   display: none;
   background-position: left;
   /*background-size: cover;*/
   background-repeat: no-repeat;
-  border-bottom: solid 1px grey;
+  border-bottom: solid 1px #d6d6d6;
 }
 
 .s19 .mySlides:nth-child(1) {
@@ -2276,81 +2284,225 @@ height: 60px;
 }
 
 .s19 .mySlides:nth-child(2) {
-  background-image: url('../images/productspage/3-tile-bg-1-products.png');
+  background-image: url('../images/productspage/3-tile-bg-2-products.png');
+
 }
 
 
-
-/* Next & previous buttons */
-
-.prev,
-.next {
-  height: 116px;
-  cursor: pointer;
-  position: absolute;
-  top: 162px;
-  width: 30px;
-  color: #cbcbca;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  background-color: #fefefd;
-  line-height: 116px;
-}
-
-.prev {
-  left: 0;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  color: #fe926d;
+.s19 .prev, .s19 .next {
+    top: 157px;
 }
 
 .s19 .slide_text_container {
   text-align: left;
 }
-  
+
 .s19 .slide_text {
-  width: 400px;
+  width: 320px;
   margin-left: auto;
+  margin-right: 60px;
+
+}
+
+.s19_product_name {
+  font-family: Arial, Helvetica, sans-serif;
+   color: #4a4a4a;
+   font-size: 24px;
+}
+
+.s19_price {
+     margin-top: 20px;
+}
+
+.s19_price_currency, .s19_price_number {
+  font-family: Arial, Helvetica, sans-serif;
+   color: #fd926d;
+   font-size: 36px;
+   font-weight: bold;
+
+}
+.s19_product_description {
+  font-family: Arial, Helvetica, sans-serif;
+   color: #8f8f8f;
+   font-size: 12px;
+   text-align: justify;
+   margin-top: 20px;
+   margin-bottom: 30px;
+}
+
+.s19 .add_to_cart_button {
+  height: 50px;
+  font-size: 14px;
+  width: 157px;
 }
 
 
-.s3_button_text {
-  vertical-align: middle;
-  padding-left: 10px;
-  padding-right: 10px;
+/*SECTION 20*/
+.s20 {
+  max-width: 972px;
+  margin: auto;
+  font-size: 0;
 }
 
-.s3_button_image {
-  vertical-align: middle;
-  padding-left: 10px;
-  padding-right: 10px;
+.s20::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0 10px;
-  background-color: #867a76;
-  border-radius: 50%;
+.s20_left, .s20_right {
   display: inline-block;
-  transition: background-color 0.6s ease;
-  margin-bottom: 14px;
 }
 
-.active,
-.dot:hover {
-  background-color: #fe926d;
+.s20_left {
+  max-width: 750px;
+   /*width: 720px;*/
+  border: solid 1px blue;
+}
+
+.s20_sort_pagination {
+ border-bottom: solid 1px #d6d6d6;
+z-index: 99;
+padding-top: 8px;
+padding-bottom: 8px;
+max-width: 720px;
+margin: auto;
+}
+
+.s20_sort_pagination::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+.s20_sort_container {
+  float: left;
+  padding-top: 8px;
+padding-bottom: 8px;
+}
+
+.s20_sort_container_text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  color: #4d4d4d;
+  vertical-align: top;
+  height: 31px;
+  line-height: 31px;
+   display: inline-block;
+   padding-right: 8px;
+}
+.s20_sort {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  width: 100px;
+}
+
+.s20_current_sort {
+  display: inline-block;
+  height: 31px;
+  line-height: 31px;
+  width: 62px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  color: #4d4d4d;
+  background-color: #f4f4f4;
+  text-align: left;
+  padding-left: 8px;
+   vertical-align: middle;
+}
+
+.s20_sort_selection_button {
+   display: inline-block;
+  border: none;
+  background-color: #e5e5e5;
+  width: 30px;
+  height: 31px;
+  line-height: 31px;
+   vertical-align: middle;
+   cursor: pointer;
+}
+.s20_sort_selection_button img {
+  vertical-align: middle;
+}
+
+.s20_sort_list_container {
+  display: none;
+  position: absolute;
+  z-index: 99;
+}
+
+.s20_sort_list {
+  
+  text-align: left;
+  width: 100px;
+  list-style: none;
+   font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  color: #4d4d4d;
+  line-height: 20px;
+   background-color: #e5e5e5;
+     cursor: pointer;
+     /*text-transform: uppercase;*/
+}
+
+.s20_sort_list_item {
+   padding-left: 8px;
+}
+
+.s20_sort_list_item:hover {
+   background-color: #d1d1d1;
+}
+
+.s20_pagination_container {
+  float: right;
+  padding-top: 8px;
+padding-bottom: 8px;
+font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  color: #4d4d4d;
+  height: 31px;
+  line-height: 31px;
+}
+
+.s20_pagination_container_text {
+  display: inline-block;
+  /*font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  color: #4d4d4d;
+  height: 31px;
+  line-height: 31px;*/
+  
+}
+.s20_pagination_list_container {
+  display: inline-block;
+}
+.s20_pagination_list {
+  list-style: none;
+}
+.s20_pagination_list_item {
+  display: inline-block;
+  width: 30px;
+  height: 31px;
+  background-color: #f4f4f4;
+  cursor: pointer;
+}
+.s20_pagination_list_item:hover,
+.s20_pagination_list_item_active {
+  background-color: #e5e5e5;
+}
+
+
+
+.s20_pagination_list_item img {
+  vertical-align: middle;
+}
+
+/*Slides */
+
+.s20_mySlides {
+  display: none;
 }
 
 
