--- a/css/style.css
+++ b/css/style.css
@@ -2572,7 +2572,7 @@ a:hover {
   border-bottom: solid 1px #d6d6d6;
   color: #727272;
 }
-.s20_category_container:last-child {
+.s20_price_filter, .s20_size_filter  {
   border: none;
 }
 
@@ -2613,6 +2613,69 @@ a:hover {
   content: url('../images/productspage/list-style.png');
  margin-left: 5px;
  margin-right: 5px;
+}
+
+#slider-range {
+ font-size: initial;
+border: none;
+ background-image: none;
+ background-color: #e5e5e5;
+ height: 5px;
+ border-radius: 0;
+
+}
+#slider-range > div {
+   background-image: none;
+  background-color: #fd926d;
+}
+#slider-range > span {
+  vertical-align:middle;
+  outline: none;
+  border: none;
+  border-radius: 50%;
+  height: 14px;
+  width: 12px;
+  background-image: none;
+    background-color: #fd926d;
+    box-shadow: 0px 2px #dd6b44;
+    box-sizing: border-box;
+}
+
+
+.s20_price_filter {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+#amount {
+  border: none;
+   font-size: 12px;
+   color: #727272;
+   width: 75px;
+}
+
+.s20_filter_button {
+  float: right;
+  color: #6f6f6f;
+  font-weight: 300;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  height: 29px;
+  border: none;
+  background-color: #e5e5e5;
+  border-bottom: solid 3px #cccccc;
+  cursor: pointer;
+  font-size: 12px;
+  width: 70px;
+  margin-top: -1px;
+}
+
+.s20_filter_button:hover {
+  background-color: #cccccc;
+}
+
+.s20_filter_button span {
+  vertical-align: middle;
 }
 
 
