--- a/css/style.css
+++ b/css/style.css
@@ -1151,9 +1151,16 @@ a:hover {
   vertical-align: middle;
 }
 
+.s6_slides_container {
+  /*border: solid 1px red;*/
+  height: 455px;
+  overflow: hidden;
+
+}
+
 .s6_mySlides {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   display: none;
   background-color: #fd926d;
   overflow: hidden;
@@ -1209,7 +1216,20 @@ a:hover {
   text-transform: uppercase;
   font-size: 16px;
 }
-
+.s6_load_more_button_container {
+  background-color: #fd926d;
+  margin-top: -5px;
+  /*border: solid 1px blue;*/
+  padding-top: 5px;
+  padding-bottom: 30px;
+  position: relative;
+  display: none;
+}
+.s6_load_more_button_container div {
+  height: 5px;
+  position: absolute;
+  background-color: gray;
+}
 
 /*SECTION 7*/
 
@@ -1383,6 +1403,30 @@ a:hover {
   padding-left: 10px;
   padding-right: 10px;
 }
+
+
+.load_more_button {
+  color: white;
+  font-weight: 300;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  height: 29px;
+  border: none;
+  background-color: black;
+  cursor: pointer;
+  font-size: 12px;
+  width: 124px;
+  display: none;
+}
+
+.s8 + .load_more_button {
+  margin-top: 15px;
+}
+
+.load_more_button:hover {
+  background-color: #333333;
+}
+
 
 
 /*SECTION 9*/
